[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles configuration"
authors = ["Simon HARVEY <simon.harvey.86@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
